--- a/wiki/fr/TechDraw_ExtensionThreadHoleSide.html
+++ b/wiki/fr/TechDraw_ExtensionThreadHoleSide.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ExtensionThreadHoleSide/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ExtensionThreadHoleSide&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_ExtensionThreadHoleSide.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Erg&auml;nzungInnengewindeSeitlich (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_ExtensionThreadHoleSide.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ExtensionThreadHoleSide (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../pl/TechDraw_ExtensionThreadHoleSide.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Rozszerzenie Geometria pomocnicza dla otworu gwintowanego, widok z boku (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/TechDraw_ExtensionThreadHoleSide.html" class="mw-pt-progress mw-pt-progress--med" title='TechDraw "&#1054;&#1073;&#1086;&#1079;&#1085;&#1072;&#1095;&#1080;&#1090;&#1100; &#1074;&#1085;&#1091;&#1090;&#1088;&#1077;&#1085;&#1085;&#1102;&#1102; &#1088;&#1077;&#1079;&#1100;&#1073;&#1091; &#1074; &#1088;&#1072;&#1079;&#1088;&#1077;&#1079;&#1077; &#1086;&#1090;&#1074;&#1077;&#1088;&#1089;&#1090;&#1080;&#1103;" (33% translated)' lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
 <div class="docnav">
@@ -58,14 +58,12 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
-<ol><li>Sp&eacute;cifiez &agrave; votre convenance les attributs de ligne avec l'outil <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionSelectLineAttributes.svg&amp;filetimestamp=20240706152455&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionSelectLineAttributes.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_ExtensionSelectLineAttributes.html" title="TechDraw ExtensionSelectLineAttributes/fr">TechDraw Choix des attributs</a>.</li>
+<ol><li>Vous pouvez sp&eacute;cifier les attributs de ligne avec l'outil <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionSelectLineAttributes.svg&amp;filetimestamp=20240706152455&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionSelectLineAttributes.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_ExtensionSelectLineAttributes.html" title="TechDraw ExtensionSelectLineAttributes/fr">TechDraw Choix des attributs</a>.</li>
 <li>S&eacute;lectionnez deux lignes parall&egrave;les.</li>
 <li>Il existe plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
 <ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionThreadHoleSide.svg&amp;filetimestamp=20241126213931&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionThreadHoleSide.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Corps de taraudage</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Extensions&nbsp;: taraudages/filetages &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionThreadHoleSide.svg&amp;filetimestamp=20241126213931&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionThreadHoleSide.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Corps de taraudage</b> &agrave; partir du menu.</li></ul></li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Taraudages/filetages/cosm&eacute;tiques &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionThreadHoleSide.svg&amp;filetimestamp=20241126213931&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionThreadHoleSide.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Corps de taraudage</b> du menu.</li></ul></li>
 <li>Un filet cosm&eacute;tique est ajout&eacute;.</li></ol>
-</div>
 <p><br>
 </p>
 <div class="docnav">
@@ -113,34 +111,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118102451
+Cached time: 20260118102530
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.088 seconds
-Real time usage: 0.251 seconds
-Preprocessor visited node count: 345/1000000
+CPU time usage: 0.075 seconds
+Real time usage: 0.121 seconds
+Preprocessor visited node count: 344/1000000
 Post&#8208;expand include size: 25681/2097152 bytes
 Template argument size: 10103/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1455/5000000 bytes
+Unstrip post&#8208;expand size: 1459/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   57.860      1 -total
- 33.89%   19.609      1 Template:TechDraw_Tools_navi/fr
- 25.21%   14.589      2 Template:Navigation_menu_2
- 23.23%   13.440      1 Template:Userdocnavi/fr
- 10.04%    5.808      1 Template:MenuCommand
-  8.74%    5.056      1 Template:GuiCommand/fr
-  8.55%    4.945      1 Template:Button
-  7.88%    4.562      1 Template:Caption
-  6.22%    3.599      2 Template:Docnav/fr
+100.00%   23.926      1 -total
+ 32.11%    7.682      1 Template:TechDraw_Tools_navi/fr
+ 21.57%    5.160      2 Template:Navigation_menu_2
+ 21.10%    5.048      1 Template:Userdocnavi/fr
+ 13.60%    3.255      2 Template:Docnav/fr
+ 13.24%    3.167      1 Template:GuiCommand/fr
+  7.37%    1.764      1 Template:Caption
+  5.54%    1.325      1 Template:MenuCommand
+  4.83%    1.155      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:267364-0!canonical and timestamp 20260118102451 and revision id 1740167. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:267364-0!canonical and timestamp 20260118102530 and revision id 1740169. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
