--- a/wiki/fr/TechDraw_ExtensionThreadHoleBottom.html
+++ b/wiki/fr/TechDraw_ExtensionThreadHoleBottom.html
@@ -1,8 +1,8 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ExtensionThreadHoleBottom/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ExtensionThreadHoleBottom&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/TechDraw_ExtensionThreadHoleBottom.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw Erg&auml;nzungInnengewindeAxial (78% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/TechDraw_ExtensionThreadHoleBottom.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Erg&auml;nzungInnengewindeAxial (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_ExtensionThreadHoleBottom.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ExtensionThreadHoleBottom (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
-<li><a href="../pl/TechDraw_ExtensionThreadHoleBottom.html" class="mw-pt-progress mw-pt-progress--high" title="Rysunek Techniczny: Rozszerzenie Geometria pomocnicza dla otworu gwintowanego, widok od do&#322;u (78% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/TechDraw_ExtensionThreadHoleBottom.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Rozszerzenie Geometria pomocnicza dla otworu gwintowanego, widok od do&#322;u (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/TechDraw_ExtensionThreadHoleBottom.html" class="mw-pt-progress mw-pt-progress--med" title='TechDraw "&#1054;&#1073;&#1086;&#1079;&#1085;&#1072;&#1095;&#1080;&#1090;&#1100; &#1074;&#1085;&#1091;&#1090;&#1088;&#1077;&#1085;&#1085;&#1102;&#1102; &#1088;&#1077;&#1079;&#1100;&#1073;&#1091; &#1086;&#1090;&#1074;&#1077;&#1088;&#1089;&#1090;&#1080;&#1103; &#1089; &#1089;&#1077;&#1095;&#1077;&#1085;&#1080;&#1077;&#1084; &#1074;&#1076;&#1086;&#1083;&#1100; &#1086;&#1089;&#1080;" (33% translated)' lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionThreadHoleSide.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionThreadHoleSide.html" title="TechDraw ExtensionThreadHoleSide/fr">Corps de taraudage</a></div>
@@ -11,7 +11,6 @@
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -22,7 +21,7 @@
 <th class="ctOdd">Emplacement du menu
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Extensions&nbsp;: taraudages/filetages &rarr; Taraudage
+<td class="ctEven">TechDraw &rarr; Taraudages/filetages/cosm&eacute;tiques &rarr; Taraudage
 </td></tr>
 <tr>
 <th class="ctOdd">Ateliers
@@ -51,7 +50,6 @@
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
@@ -117,34 +115,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111112310
+Cached time: 20260118102636
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.074 seconds
-Real time usage: 0.118 seconds
-Preprocessor visited node count: 349/1000000
+CPU time usage: 0.081 seconds
+Real time usage: 0.148 seconds
+Preprocessor visited node count: 348/1000000
 Post&#8208;expand include size: 25771/2097152 bytes
 Template argument size: 10197/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1476/5000000 bytes
+Unstrip post&#8208;expand size: 1486/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   38.534      1 -total
- 33.23%   12.806      1 Template:TechDraw_Tools_navi/fr
- 20.66%    7.962      1 Template:Userdocnavi/fr
- 17.61%    6.784      2 Template:Navigation_menu_2
- 15.86%    6.112      1 Template:GuiCommand/fr
- 13.07%    5.036      2 Template:Docnav/fr
-  8.15%    3.141      1 Template:Caption
-  3.67%    1.413      1 Template:MenuCommand
-  3.46%    1.334      1 Template:Button
+100.00%   33.785      1 -total
+ 31.14%   10.522      1 Template:TechDraw_Tools_navi/fr
+ 18.83%    6.360      2 Template:Navigation_menu_2
+ 16.93%    5.721      1 Template:Userdocnavi/fr
+ 12.58%    4.252      2 Template:Docnav/fr
+ 12.56%    4.245      1 Template:Caption
+ 10.54%    3.562      1 Template:GuiCommand/fr
+  7.04%    2.380      1 Template:Button
+  6.35%    2.145      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:267334-0!canonical and timestamp 20260111112310 and revision id 1733289. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:267334-0!canonical and timestamp 20260118102636 and revision id 1740171. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
