--- a/wiki/de/Macro_FCCircularText.html
+++ b/wiki/de/Macro_FCCircularText.html
@@ -410,11 +410,9 @@ Wenn der Befehl in der ausgew&auml;hlten Option nicht verwendet wird, wird er au
 </p><div style="clear:both"></div>
 <figure class="mw-default-size mw-halign-left" typeof="mw:File"><a href="../index.php?title=FCCircularText_17.png&amp;filetimestamp=20200601150530&amp;.html" class="mw-file-description"><img src="../File/FCCircularText_17.png" decoding="async" width="492" height="131" class="mw-file-element" data-file-width="492" data-file-height="131"></a><figcaption></figcaption></figure><p><span typeof="mw:File"><a href="../index.php?title=FCCircularText_37.png&amp;filetimestamp=20141124203510&amp;.html" class="mw-file-description"><img src="../File/FCCircularText_37.png" decoding="async" width="200" height="128" class="mw-file-element" data-file-width="720" data-file-height="462"></a></span>
 </p><div style="clear:both"></div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li>If <b>Support number face</b> is equal to zero there is no support.</li>
-<li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Mode Roman</span>&nbsp;: The writing will be in Roman figures <b>I II III IIII V VI VII VIII IX X XI XII</b></li>
-<li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Axial</span>  &nbsp;: The figures will be written axially.</li></ul>
-</div>
+<ul><li>If <b>Support number face</b> (Anzahl der Unterst&uuml;tzungsfl&auml;chen) ist gleich Null, gibt es keine Unterst&uuml;tzung.</li>
+<li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Mode Roman</span>&nbsp;: Die Schrift wird in r&ouml;mischen Ziffern sein. <b>I II III IIII V VI VII VIII IX X XI XII</b></li>
+<li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Axial</span>  &nbsp;: Die Zahlen werden axial geschrieben.</li></ul>
 <p><span id="Path_section"></span>
 </p>
 <h3><span class="mw-headline" id="Abschnitt_Pfad">Abschnitt Pfad</span></h3>
@@ -629,12 +627,12 @@ Wenn der Befehl in der ausgew&auml;hlten Option nicht verwendet wird, wird er au
 <center>
 <ul class="gallery mw-gallery-traditional">
 		<li class="gallerybox" style="width: 335px">
-			<div class="thumb" style="width: 330px; height: 230px;"><span typeof="mw:File"><a href="../index.php?title=FCCircularText_45.png&amp;filetimestamp=20160703181957&amp;.html" class="mw-file-description" title="Discretize the perimeter and create points with the macro Work Features. Tab Point &gt; Point 2/3 &gt; Points=Cut (Wire)"><img alt="Discretize the perimeter and create points with the macro Work Features. Tab Point &gt; Point 2/3 &gt; Points=Cut (Wire)" src="../File/FCCircularText_45.png" decoding="async" width="267" height="200" class="mw-file-element" data-file-width="640" data-file-height="480"></a></span></div>
-			<div class="gallerytext">Discretize the perimeter and create points with the macro <a href="../Macro_WorkFeatures.html" title="Macro WorkFeatures">Work Features</a>.<br>Tab Point &gt; Point 2/3 &gt; Points=Cut (Wire)</div>
+			<div class="thumb" style="width: 330px; height: 230px;"><span typeof="mw:File"><a href="../index.php?title=FCCircularText_45.png&amp;filetimestamp=20160703181957&amp;.html" class="mw-file-description" title="Den Umfang diskretisieren und Punkte mit dem Makro ArbeitsFunktionen erstellen. Reiter Point &gt; Point 2/3 &gt; Points=Cut (Wire)"><img alt="Den Umfang diskretisieren und Punkte mit dem Makro ArbeitsFunktionen erstellen. Reiter Point &gt; Point 2/3 &gt; Points=Cut (Wire)" src="../File/FCCircularText_45.png" decoding="async" width="267" height="200" class="mw-file-element" data-file-width="640" data-file-height="480"></a></span></div>
+			<div class="gallerytext">Den Umfang diskretisieren und Punkte mit dem Makro <a href="../de/Macro_WorkFeatures.html" title="Macro WorkFeatures/de">ArbeitsFunktionen</a> erstellen.<br>Reiter Point &gt; Point 2/3 &gt; Points=Cut (Wire)</div>
 		</li>
 		<li class="gallerybox" style="width: 335px">
-			<div class="thumb" style="width: 330px; height: 230px;"><span typeof="mw:File"><a href="../index.php?title=FCCircularText_46.png&amp;filetimestamp=20160703182029&amp;.html" class="mw-file-description" title="Create the circle to 3 points with the macro Work Features. Tab Circle Circle=(3 Points)"><img alt="Create the circle to 3 points with the macro Work Features. Tab Circle Circle=(3 Points)" src="../File/FCCircularText_46.png" decoding="async" width="267" height="200" class="mw-file-element" data-file-width="640" data-file-height="480"></a></span></div>
-			<div class="gallerytext">Create the circle to 3 points with the macro <a href="../Macro_WorkFeatures.html" title="Macro WorkFeatures">Work Features</a>.<br>Tab Circle Circle=(3 Points)</div>
+			<div class="thumb" style="width: 330px; height: 230px;"><span typeof="mw:File"><a href="../index.php?title=FCCircularText_46.png&amp;filetimestamp=20160703182029&amp;.html" class="mw-file-description" title="Den Kreis mit drei Punkten mit dem Makro ArbeitsFunktionen erstellen. Reiter Circle Circle=(3 Points)"><img alt="Den Kreis mit drei Punkten mit dem Makro ArbeitsFunktionen erstellen. Reiter Circle Circle=(3 Points)" src="../File/FCCircularText_46.png" decoding="async" width="267" height="200" class="mw-file-element" data-file-width="640" data-file-height="480"></a></span></div>
+			<div class="gallerytext">Den Kreis mit drei Punkten mit dem Makro <a href="../de/Macro_WorkFeatures.html" title="Macro WorkFeatures/de">ArbeitsFunktionen</a> erstellen.<br>Reiter Circle Circle=(3 Points)</div>
 		</li>
 </ul>
 </center>
@@ -970,35 +968,35 @@ Modusentlastung:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118102358
+Cached time: 20260118102644
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.429 seconds
-Real time usage: 0.603 seconds
-Preprocessor visited node count: 1593/1000000
+CPU time usage: 0.490 seconds
+Real time usage: 0.809 seconds
+Preprocessor visited node count: 1592/1000000
 Post&#8208;expand include size: 41112/2097152 bytes
 Template argument size: 12832/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 10/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 66535/5000000 bytes
+Unstrip post&#8208;expand size: 66596/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  359.182      1 -total
-  3.52%   12.657      1 Template:Draft_Tools_navi/de
-  2.30%    8.258      1 Template:Userdocnavi/de
-  2.01%    7.228      7 Template:RadioButton
-  1.37%    4.912      3 Template:ColoredText
-  1.34%    4.796      2 Template:Navigation_menu_2
-  1.28%    4.601     18 Template:FALSE
-  1.01%    3.617     10 Template:Code
-  0.99%    3.555     10 Template:CheckBox
-  0.98%    3.525      1 Template:Macro/de
+100.00%  475.863      1 -total
+  3.38%   16.095      1 Template:Codeextralink
+  3.32%   15.793     10 Template:CheckBox
+  2.56%   12.178      1 Template:Draft_Tools_navi/de
+  1.65%    7.863     10 Template:Code
+  1.62%    7.696      3 Template:ColoredText
+  1.37%    6.518     18 Template:FALSE
+  1.17%    5.589      7 Template:RadioButton
+  1.04%    4.971     19 Template:Clear
+  1.03%    4.887      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260118102357 and revision id 1740163. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260118102643 and revision id 1740173. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
