Created page with "Spolu s booleovskými operacemi definovanými v [[Image:Workbench_Part.svg|16px]] [[Part Workbench|pracovní ploše Part]], tvoří Sketcher Workbench, zkráceně "Sketcher", základ metody [[Constructive_solid_geometry|konstruktivní geometrie těles]] (CSG) pro vytváření těles. Spolu s operacemi [[Image:Workbench_PartDesign.svg|16px]] [[PartDesign_Workbench|pracovní plochy PartDesign]], tvoří také základ metodiky  [[Feature_editing|editace prvků]] pro vytvá..."

--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -37,11 +37,8 @@
 </p>
 <h2><span id=".C3.9Avod"></span><span class="mw-headline" id="&Uacute;vod">&Uacute;vod</span></h2>
 <p>Pomoc&iacute; <span typeof="mw:File"><a href="../index.php?title=Workbench_Sketcher.svg&amp;filetimestamp=20231231194727&amp;.html" class="mw-file-description"><img src="../File/Workbench_Sketcher.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Pracovn&iacute; plochy Sketcher</a> Lze vytv&aacute;&#345;et 2D n&aacute;&#269;rtky ur&#269;en&eacute; pro pou&#382;it&iacute; v jin&yacute;ch pracovn&iacute;ch ploch&aacute;ch. 2D n&aacute;&#269;rtky jsou v&yacute;choz&iacute;m bodem pro mnoho CAD model&#367;. Obvykle definuj&iacute; profily a cesty pro operace k vytvo&#345;en&iacute; 3D tvar&#367;. Kone&#269;n&yacute; tvar modelu m&#367;&#382;e z&aacute;viset na n&#283;kolika n&aacute;&#269;rtc&iacute;ch.
+</p><p>Spolu s booleovsk&yacute;mi operacemi definovan&yacute;mi v <span typeof="mw:File"><a href="../index.php?title=Workbench_Part.svg&amp;filetimestamp=20240712190040&amp;.html" class="mw-file-description"><img src="../File/Workbench_Part.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_Workbench.html" title="Part Workbench">pracovn&iacute; plo&scaron;e Part</a>, tvo&#345;&iacute; Sketcher Workbench, zkr&aacute;cen&#283; "Sketcher", z&aacute;klad metody <a href="../Constructive_solid_geometry.html" title="Constructive solid geometry">konstruktivn&iacute; geometrie t&#283;les</a> (CSG) pro vytv&aacute;&#345;en&iacute; t&#283;les. Spolu s operacemi <span typeof="mw:File"><a href="../index.php?title=Workbench_PartDesign.svg&amp;filetimestamp=20240405092932&amp;.html" class="mw-file-description"><img src="../File/Workbench_PartDesign.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">pracovn&iacute; plochy PartDesign</a>, tvo&#345;&iacute; tak&eacute; z&aacute;klad metodiky  <a href="../Feature_editing.html" title="Feature editing">editace prvk&#367;</a> pro vytv&aacute;&#345;en&iacute; t&#283;les. Ale n&aacute;&#269;rtky pou&#382;&iacute;v&aacute; i mnoho jin&yacute;ch pracovn&iacute;ch ploch.
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>Together with boolean operations defined in the <span typeof="mw:File"><a href="../index.php?title=Workbench_Part.svg&amp;filetimestamp=20240712190040&amp;.html" class="mw-file-description"><img src="../File/Workbench_Part.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_Workbench.html" title="Part Workbench">Part Workbench</a>, the Sketcher Workbench, or "The Sketcher" for short, forms the basis of the <a href="../Constructive_solid_geometry.html" title="Constructive solid geometry">constructive solid geometry</a> (CSG) method of building solids. Together with <span typeof="mw:File"><a href="../index.php?title=Workbench_PartDesign.svg&amp;filetimestamp=20240405092932&amp;.html" class="mw-file-description"><img src="../File/Workbench_PartDesign.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">PartDesign Workbench</a> operations, it also forms the basis of the <a href="../Feature_editing.html" title="Feature editing">feature editing</a> methodology of creating solids. But many other workbenches use sketches as well.
-</p>
-</div>
 <div class="mw-translate-fuzzy">
 <p>Samotn&aacute; pracovn&iacute; plocha Skic&aacute;&#345; obsahuje vazby - umo&#382;&#328;uj&iacute;c&iacute; 2D tvar&#367;m m&iacute;t vazby pro p&#345;esn&eacute; definice konstrukc&iacute;. A kalkul&aacute;tor vazeb kter&yacute; po&#269;&iacute;t&aacute; roz&scaron;&iacute;&#345;en&iacute; vazeb 2D konstrukc&iacute; a umo&#382;&#328;uje interaktivn&iacute; zkoum&aacute;n&iacute; stup&#328;&#367; volnosti n&aacute;&#269;rt&#367;.
 </p>
@@ -858,13 +855,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118101738
+Cached time: 20260118102733
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.393 seconds
-Real time usage: 0.487 seconds
-Preprocessor visited node count: 1567/1000000
+CPU time usage: 0.446 seconds
+Real time usage: 0.843 seconds
+Preprocessor visited node count: 1566/1000000
 Post&#8208;expand include size: 34317/2097152 bytes
 Template argument size: 9744/2097152 bytes
 Highest expansion depth: 7/100
@@ -874,19 +871,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   47.202      1 -total
- 22.35%   10.552      1 Template:Sketcher_Tools_navi/cs
- 12.23%    5.775      2 Template:Navigation_menu_2
- 10.72%    5.058      1 Template:Userdocnavi/cs
- 10.45%    4.931      5 Template:Caption
-  9.89%    4.667      1 Template:PropertyView
-  7.63%    3.600     35 Template:Version
-  6.03%    2.845      8 Template:VersionPlus
-  5.53%    2.610     14 Template:KEY
-  5.51%    2.601      1 Template:TOCright
+100.00%   44.657      1 -total
+ 37.36%   16.684      1 Template:Sketcher_Tools_navi/cs
+ 29.38%   13.121      2 Template:Navigation_menu_2
+ 20.66%    9.224      1 Template:Userdocnavi/cs
+  6.99%    3.122      1 Template:PropertyView
+  5.64%    2.517      2 Template:Docnav
+  5.16%    2.306     35 Template:Version
+  4.50%    2.008      5 Template:Caption
+  4.23%    1.890      1 Template:Variable
+  3.21%    1.435      5 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118101737 and revision id 1740152. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118102732 and revision id 1740175. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
