Updated page TechDraw ExtensionThreadHoleBottom/fr

--- a/wiki/fr/TechDraw_ExtensionThreadHoleBottom.html
+++ b/wiki/fr/TechDraw_ExtensionThreadHoleBottom.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ExtensionThreadHoleBottom/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ExtensionThreadHoleBottom&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_ExtensionThreadHoleBottom.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Erg&auml;nzungInnengewindeAxial (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_ExtensionThreadHoleBottom.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ExtensionThreadHoleBottom (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../pl/TechDraw_ExtensionThreadHoleBottom.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Rozszerzenie Geometria pomocnicza dla otworu gwintowanego, widok od do&#322;u (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/TechDraw_ExtensionThreadHoleBottom.html" class="mw-pt-progress mw-pt-progress--med" title='TechDraw "&#1054;&#1073;&#1086;&#1079;&#1085;&#1072;&#1095;&#1080;&#1090;&#1100; &#1074;&#1085;&#1091;&#1090;&#1088;&#1077;&#1085;&#1085;&#1102;&#1102; &#1088;&#1077;&#1079;&#1100;&#1073;&#1091; &#1086;&#1090;&#1074;&#1077;&#1088;&#1089;&#1090;&#1080;&#1103; &#1089; &#1089;&#1077;&#1095;&#1077;&#1085;&#1080;&#1077;&#1084; &#1074;&#1076;&#1086;&#1083;&#1100; &#1086;&#1089;&#1080;" (33% translated)' lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
 <div class="docnav">
@@ -60,14 +60,12 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
-<ol><li>Sp&eacute;cifiez &agrave; votre convenance les attributs de ligne avec l'outil <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionSelectLineAttributes.svg&amp;filetimestamp=20240706152455&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionSelectLineAttributes.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_ExtensionSelectLineAttributes.html" title="TechDraw ExtensionSelectLineAttributes/fr">TechDraw Choix des attributs</a>.</li>
+<ol><li>Vous pouvez sp&eacute;cifier les attributs de ligne avec l'outil <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionSelectLineAttributes.svg&amp;filetimestamp=20240706152455&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionSelectLineAttributes.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_ExtensionSelectLineAttributes.html" title="TechDraw ExtensionSelectLineAttributes/fr">TechDraw Choix des attributs</a>.</li>
 <li>S&eacute;lectionnez un ou plusieurs cercles.</li>
 <li>Il existe plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
 <ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionThreadHoleBottom.svg&amp;filetimestamp=20241126213940&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionThreadHoleBottom.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Taraudage</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Extensions&nbsp;: taraudages/filetages &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionThreadHoleBottom.svg&amp;filetimestamp=20241126213940&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionThreadHoleBottom.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Taraudage</b> &agrave; partir du menu.</li></ul></li>
-<li>Les filets cosm&eacute;tiques sont ajout&eacute;s.</li></ol>
-</div>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Taraudages/filetages/cosm&eacute;tiques &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionThreadHoleBottom.svg&amp;filetimestamp=20241126213940&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionThreadHoleBottom.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Taraudage</b> du menu.</li></ul></li>
+<li>Les filetages cosm&eacute;tiques sont ajout&eacute;s.</li></ol>
 <p><br>
 </p>
 <div class="docnav">
@@ -115,34 +113,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118102636
+Cached time: 20260118102742
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.081 seconds
-Real time usage: 0.148 seconds
-Preprocessor visited node count: 348/1000000
+CPU time usage: 0.078 seconds
+Real time usage: 0.118 seconds
+Preprocessor visited node count: 347/1000000
 Post&#8208;expand include size: 25771/2097152 bytes
 Template argument size: 10197/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1486/5000000 bytes
+Unstrip post&#8208;expand size: 1490/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   33.785      1 -total
- 31.14%   10.522      1 Template:TechDraw_Tools_navi/fr
- 18.83%    6.360      2 Template:Navigation_menu_2
- 16.93%    5.721      1 Template:Userdocnavi/fr
- 12.58%    4.252      2 Template:Docnav/fr
- 12.56%    4.245      1 Template:Caption
- 10.54%    3.562      1 Template:GuiCommand/fr
-  7.04%    2.380      1 Template:Button
-  6.35%    2.145      1 Template:MenuCommand
+100.00%   24.990      1 -total
+ 35.97%    8.990      1 Template:TechDraw_Tools_navi/fr
+ 25.60%    6.398      2 Template:Navigation_menu_2
+ 19.12%    4.777      1 Template:Userdocnavi/fr
+ 13.77%    3.441      1 Template:GuiCommand/fr
+ 10.40%    2.600      2 Template:Docnav/fr
+  7.93%    1.981      1 Template:Caption
+  4.95%    1.238      1 Template:Button
+  4.93%    1.232      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:267334-0!canonical and timestamp 20260118102636 and revision id 1740171. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:267334-0!canonical and timestamp 20260118102742 and revision id 1740177. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
