--- a/wiki/fr/TechDraw_ExtensionThreadBoltSide.html
+++ b/wiki/fr/TechDraw_ExtensionThreadBoltSide.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ExtensionThreadBoltSide/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ExtensionThreadBoltSide&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_ExtensionThreadBoltSide.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Erg&auml;nzungAu&szlig;engewindeSeitlich (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_ExtensionThreadBoltSide.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ExtensionThreadBoltSide (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../pl/TechDraw_ExtensionThreadBoltSide.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Rozszerzenie Geometria pomocnicza dla gwintu &#347;ruby, widok z boku (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/TechDraw_ExtensionThreadBoltSide.html" class="mw-pt-progress mw-pt-progress--med" title='TechDraw "&#1054;&#1073;&#1086;&#1079;&#1085;&#1072;&#1095;&#1080;&#1090;&#1100; &#1085;&#1072;&#1088;&#1091;&#1078;&#1085;&#1091;&#1102; &#1088;&#1077;&#1079;&#1100;&#1073;&#1091; &#1074; &#1088;&#1072;&#1079;&#1088;&#1077;&#1079;&#1077; &#1089;&#1090;&#1077;&#1088;&#1078;&#1085;&#1103;" (33% translated)' lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
 <div class="docnav">
@@ -58,14 +58,12 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
-<ol><li>Sp&eacute;cifiez &agrave; votre convenance les attributs de ligne avec l'outil <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionSelectLineAttributes.svg&amp;filetimestamp=20240706152455&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionSelectLineAttributes.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_ExtensionSelectLineAttributes.html" title="TechDraw ExtensionSelectLineAttributes/fr">TechDraw Choix des attributs</a>.</li>
+<ol><li>Vous pouvez sp&eacute;cifier les attributs de ligne avec l'outil <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionSelectLineAttributes.svg&amp;filetimestamp=20240706152455&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionSelectLineAttributes.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_ExtensionSelectLineAttributes.html" title="TechDraw ExtensionSelectLineAttributes/fr">TechDraw Choix des attributs</a>.</li>
 <li>S&eacute;lectionnez deux lignes parall&egrave;les.</li>
 <li>Il existe plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
 <ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionThreadBoltSide.svg&amp;filetimestamp=20241126213949&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionThreadBoltSide.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../TechDraw_ExtensionThreadBoltSide.html" title="TechDraw ExtensionThreadBoltSide">Corps de filetage</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Extensions&nbsp;: taraudages/filetages &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionThreadBoltSide.svg&amp;filetimestamp=20241126213949&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionThreadBoltSide.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Corps de filetage</b> &agrave; partir du menu.</li></ul></li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Taraudages/filetages/cosm&eacute;tiques &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionThreadBoltSide.svg&amp;filetimestamp=20241126213949&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionThreadBoltSide.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Corps de filetage</b> du menu.</li></ul></li>
 <li>Un corps de filetage cosm&eacute;tique est ajout&eacute;.</li></ol>
-</div>
 <p><br>
 </p>
 <div class="docnav">
@@ -113,34 +111,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118102816
+Cached time: 20260118102851
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.091 seconds
-Real time usage: 0.143 seconds
-Preprocessor visited node count: 345/1000000
+CPU time usage: 0.082 seconds
+Real time usage: 0.111 seconds
+Preprocessor visited node count: 344/1000000
 Post&#8208;expand include size: 25636/2097152 bytes
 Template argument size: 10068/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1442/5000000 bytes
+Unstrip post&#8208;expand size: 1446/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   35.245      1 -total
- 35.89%   12.649      1 Template:TechDraw_Tools_navi/fr
- 21.24%    7.485      2 Template:Navigation_menu_2
- 14.94%    5.267      1 Template:Userdocnavi/fr
- 12.02%    4.237      2 Template:Docnav/fr
- 11.52%    4.062      1 Template:GuiCommand/fr
- 11.03%    3.886      1 Template:Caption
-  7.31%    2.577      1 Template:Button
-  4.60%    1.621      1 Template:MenuCommand
+100.00%   22.873      1 -total
+ 22.04%    5.041      1 Template:TechDraw_Tools_navi/fr
+ 18.77%    4.294      2 Template:Navigation_menu_2
+ 18.17%    4.157      1 Template:GuiCommand/fr
+ 16.77%    3.836      2 Template:Docnav/fr
+ 13.95%    3.190      1 Template:Userdocnavi/fr
+ 13.06%    2.988      1 Template:Caption
+  6.97%    1.593      1 Template:Button
+  6.12%    1.401      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:267354-0!canonical and timestamp 20260118102816 and revision id 1740179. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:267354-0!canonical and timestamp 20260118102851 and revision id 1740181. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
