Updated page Sketcher Workbench/cs

--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -46,12 +46,8 @@
 <p><span id="Constraints"></span>
 </p>
 <h2><span class="mw-headline" id="Vazby">Vazby</span></h2>
-<div class="mw-translate-fuzzy">
-<h4><span id="Co_jsou_vazby.3F"></span><span class="mw-headline" id="Co_jsou_vazby?">Co jsou vazby?</span></h4>
-<p>Vazby jsou pou&#382;ity k omezen&iacute; stup&#328;&#367; volnosti objektu. Nap&#345;&iacute;klad p&#345;&iacute;mka bez vazeb m&aacute; 4 stupn&#283; volnosti: m&#367;&#382;e se posunovat vodorovn&#283; nebo svisle, m&#367;&#382;e b&yacute;t natahov&aacute;na a ot&aacute;&#269;ena.
-</p>
-</div>
-<p>Pou&#382;it&iacute; vodorovn&eacute; nebo svisl&eacute; vazby nebo vazbu &uacute;hlu (relativn&#283; k jin&eacute; p&#345;&iacute;mce nebo k n&#283;kter&eacute; z os) omez&iacute; jej&iacute; mo&#382;nosti ot&aacute;&#269;en&iacute;, tak&#382;e j&iacute; zbudou jen t&#345;i stupn&#283; volnosti. Zavazben&iacute; jednoho bodu v relaci k po&#269;&aacute;tku odebere dal&scaron;&iacute; 2 stupn&#283; volnosti. A aplikace vazby rozm&#283;ru odebere posledn&iacute; stupe&#328; volnosti. P&#345;&iacute;mka je potom pova&#382;ov&aacute;na za <b>pln&#283; vazbenou</b>.
+<p>Vazby se pou&#382;&iacute;vaj&iacute; k omezen&iacute; stup&#328;&#367; volnosti objektu. Nap&#345;&iacute;klad p&#345;&iacute;mka bez vazeb m&aacute; 4 stupn&#283; volnosti (zkr&aacute;cen&#283; &bdquo;DoF&ldquo;): lze ji posouvat vodorovn&#283; nebo svisle, lze ji nat&aacute;hnout a lze ji ot&aacute;&#269;et.
+</p><p>Pou&#382;it&iacute; vodorovn&eacute; nebo svisl&eacute; vazby nebo vazbu &uacute;hlu (relativn&#283; k jin&eacute; p&#345;&iacute;mce nebo k n&#283;kter&eacute; z os) omez&iacute; jej&iacute; mo&#382;nosti ot&aacute;&#269;en&iacute;, tak&#382;e j&iacute; zbudou jen t&#345;i stupn&#283; volnosti. Zavazben&iacute; jednoho bodu v relaci k po&#269;&aacute;tku odebere dal&scaron;&iacute; 2 stupn&#283; volnosti. A aplikace vazby rozm&#283;ru odebere posledn&iacute; stupe&#328; volnosti. P&#345;&iacute;mka je potom pova&#382;ov&aacute;na za <b>pln&#283; vazbenou</b>.
 </p>
 <div class="mw-translate-fuzzy">
 <p>V&iacute;ce objekt&#367; m&#367;&#382;e b&yacute;t vazbeno mezi sebou vz&aacute;jemn&#283;. Dv&#283; p&#345;&iacute;mky mohou b&yacute;t spojeny prost&#345;ednictv&iacute;m jejich bod&#367; pomoc&iacute; vazby souhlasn&yacute;ch bod&#367;. M&#367;&#382;e b&yacute;t nastaven &uacute;hel mezi nimi nebo mohou b&yacute;t nastaveny kolmo k sob&#283;. P&#345;&iacute;mka se m&#367;&#382;e dot&yacute;kat oblouku nebo kru&#382;nice, atd.
@@ -844,13 +840,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118103311
+Cached time: 20260118103401
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.463 seconds
-Real time usage: 0.792 seconds
-Preprocessor visited node count: 1572/1000000
+CPU time usage: 0.438 seconds
+Real time usage: 0.642 seconds
+Preprocessor visited node count: 1568/1000000
 Post&#8208;expand include size: 34973/2097152 bytes
 Template argument size: 9764/2097152 bytes
 Highest expansion depth: 7/100
@@ -860,19 +856,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   35.435      1 -total
- 20.60%    7.300      1 Template:Sketcher_Tools_navi/cs
- 14.46%    5.124      1 Template:PropertyView
- 12.06%    4.274      2 Template:Navigation_menu_2
- 11.04%    3.911      1 Template:Userdocnavi/cs
-  8.93%    3.164      2 Template:Docnav
-  7.72%    2.735     35 Template:Version
-  5.99%    2.123      8 Template:VersionPlus
-  5.50%    1.948     14 Template:KEY
-  5.48%    1.942      1 Template:Variable
+100.00%   38.707      1 -total
+ 28.11%   10.882      1 Template:Sketcher_Tools_navi/cs
+ 14.72%    5.698      2 Template:Navigation_menu_2
+ 13.87%    5.368      1 Template:Userdocnavi/cs
+  8.04%    3.112      1 Template:PropertyView
+  7.48%    2.896     35 Template:Version
+  6.05%    2.341      6 Template:Caption
+  5.66%    2.189      2 Template:Docnav
+  4.91%    1.901     14 Template:KEY
+  4.71%    1.823      5 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118103310 and revision id 1740189. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118103400 and revision id 1740191. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
